# defi-cli

./: .codereview.md  .gitignore  .pre-commit-config.yaml  AUDIT_REPORT.md  CHANGELOG.md  COMPLIANCE.md  LICENSE  README.md  SECURITY.md  TEST_REPORT.md  historical_analyzer.py  html_generator.py  pool_scout.py  position_indexer.py  position_reader.py  pyproject.toml  real_defi_math.py  requirements.txt  run.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: ci.yml  release.yml
defi_cli/: __init__.py  central_config.py  commands.py  dex_registry.py  dexscreener_client.py  html_styles.py  legal_disclaimers.py  rpc_helpers.py  stablecoins.py
tests/: test_codereview.py  test_math.py  test_units.py
